[project]
name = "cutelogActions"
version = "0.0.1"
description = "A simple cutelog wrapper which provides configurable actions associated with a log message."
authors = [
    {name = "Stephen Gaito", email = "stephen@perceptisys.co.uk"},
]
dependencies = [
    "cutelog>=2.0.7",
    "setuptools>=65.5.1",
    "PyQt5>=5.15.7",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
cla = "cutelogActions:__main__.main"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
